--- a/portfolio.html
+++ b/portfolio.html
@@ -13,6 +13,7 @@
       rel="stylesheet"
     />
     <!-- Styles link -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
@@ -81,17 +82,20 @@
             <li class="project-item">
               <a
                 href="#"
-                class="link"
+                class="project-link link"
                 target="_blank"
                 title="BankApp"
                 rel="noopener nofollow"
               >
-                <img
-                  src="./images/banking-app.jpg"
-                  alt="Banking App Interface Concept"
-                  width="360"
-                  height="300"
-                />
+                <div class="project-thumb">
+                  <img
+                    src="./images/banking-app.jpg"
+                    alt="Banking App Interface Concept"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="text-overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                </div>
                 <div class="card-content">
                   <h2 class="project-card-heading">
                     Banking App Interface Concept
@@ -103,17 +107,20 @@
             <li class="project-item">
               <a
                 href="#"
-                class="link"
+                class="project-link link"
                 target="_blank"
                 title="QR-code"
                 rel="noopener nofollow"
               >
-                <img
-                  src="./images/cashless-payment.jpg"
-                  alt="Phone with QR-code"
-                  width="360"
-                  height="300"
-                />
+                <div class="project-thumb">
+                  <img
+                    src="./images/cashless-payment.jpg"
+                    alt="Phone with QR-code"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="text-overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                </div>
                 <div class="card-content">
                   <h2 class="project-card-heading">Cashless Payment</h2>
                   <p class="project-card-type">Marketing</p>
@@ -123,17 +130,20 @@
             <li class="project-item">
               <a
                 href="#"
-                class="link"
+                class="project-link link"
                 target="_blank"
                 title="Meditaion"
                 rel="noopener nofollow"
               >
-                <img
-                  src="./images/meditaion-app.jpg"
-                  alt="Laptop and phone with the app open"
-                  width="360"
-                  height="300"
-                />
+                <div class="project-thumb">
+                  <img
+                    src="./images/meditaion-app.jpg"
+                    alt="Laptop and phone with the app open"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="text-overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                </div>
                 <div class="card-content">
                   <h2 class="project-card-heading">Meditaion App</h2>
                   <p class="project-card-type">App</p>
@@ -143,17 +153,20 @@
             <li class="project-item">
               <a
                 href="#"
-                class="link"
+                class="project-link link"
                 target="_blank"
                 title="Taxi"
                 rel="noopener nofollow"
               >
-                <img
-                  src="./images/taxi-service.jpg"
-                  alt="Driver behind the wheel of the car"
-                  width="360"
-                  height="300"
-                />
+                <div class="project-thumb">
+                  <img
+                    src="./images/taxi-service.jpg"
+                    alt="Driver behind the wheel of the car"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="text-overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                </div>
                 <div class="card-content">
                   <h2 class="project-card-heading">Taxi Service</h2>
                   <p class="project-card-type">App</p>
@@ -163,17 +176,20 @@
             <li class="project-item">
               <a
                 href="#"
-                class="link"
+                class="project-link link"
                 target="_blank"
                 title="Screen"
                 rel="noopener nofollow"
               >
-                <img
-                  src="./images/screen-illustrations.jpg"
-                  alt="Illustrations of the phone screen"
-                  width="360"
-                  height="300"
-                />
+                <div class="project-thumb">
+                  <img
+                    src="./images/screen-illustrations.jpg"
+                    alt="Illustrations of the phone screen"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="text-overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                </div>
                 <div class="card-content">
                   <h2 class="project-card-heading">Screen Illustrations</h2>
                   <p class="project-card-type">Design</p>
@@ -183,17 +199,20 @@
             <li class="project-item">
               <a
                 href="#"
-                class="link"
+                class="project-link link"
                 target="_blank"
                 title="Courses"
                 rel="noopener nofollow"
               >
-                <img
-                  src="./images/online-courses.jpg"
-                  alt="The girl communicates online"
-                  width="360"
-                  height="300"
-                />
+                <div class="project-thumb">
+                  <img
+                    src="./images/online-courses.jpg"
+                    alt="The girl communicates online"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="text-overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                </div>
                 <div class="card-content">
                   <h2 class="project-card-heading">Online Courses</h2>
                   <p class="project-card-type">Marketing</p>
@@ -203,17 +222,20 @@
             <li class="project-item">
               <a
                 href="#"
-                class="link"
+                class="project-link link"
                 target="_blank"
                 title="Instagram"
                 rel="noopener nofollow"
               >
-                <img
-                  src="./images/instagram-stories.jpg"
-                  alt="Insta Stories on the phone"
-                  width="360"
-                  height="300"
-                />
+                <div class="project-thumb">
+                  <img
+                    src="./images/instagram-stories.jpg"
+                    alt="Insta Stories on the phone"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="text-overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                </div>
                 <div class="card-content">
                   <h2 class="project-card-heading">
                     Instagram Stories Concept
@@ -225,17 +247,20 @@
             <li class="project-item">
               <a
                 href="#"
-                class="link"
+                class="project-link link"
                 target="_blank"
                 title="Organic Food"
                 rel="noopener nofollow"
               >
-                <img
-                  src="./images/organic-food.jpg"
-                  alt="Girl with a bag of fruit"
-                  width="360"
-                  height="300"
-                />
+               <div class="project-thumb">
+                  <img
+                    src="./images/organic-food.jpg"
+                    alt="Girl with a bag of fruit"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="text-overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+               </div>
                 <div class="card-content">
                   <h2 class="project-card-heading">Organic Food</h2>
                   <p class="project-card-type">Web Site</p>
@@ -245,17 +270,20 @@
             <li class="project-item">
               <a
                 href="#"
-                class="link"
+                class="project-link link"
                 target="_blank"
                 title="Coffee"
                 rel="noopener nofollow"
               >
-                <img
-                  src="./images/fresh-coffee.jpg"
-                  alt="Drawing with milk on a cup of coffee"
-                  width="360"
-                  height="300"
-                />
+                <div class="project-thumb">
+                  <img
+                    src="./images/fresh-coffee.jpg"
+                    alt="Drawing with milk on a cup of coffee"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="text-overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                </div>
                 <div class="card-content">
                   <h2 class="project-card-heading">Fresh Coffee</h2>
                   <p class="project-card-type">Web Site</p>
